fixed 4:3 not fitting

--- a/public/assets/style/main.scss
+++ b/public/assets/style/main.scss
@@ -278,7 +278,7 @@ body {
                         "p2"
                         "p3"
                         "p4";
-                    height: 58vh;
+                    height: 57vh;
                 }
 
                 //THE IMAGE INSIDE POSTS SHOULD BE ""calc(28vw/2 - 10px);""
